Final Preview, Edited performance, some css. Colored remaining

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         </div>
 
         <div id="one" class="content-container right bottom single">
-            <p class="content-child flexible ">
+            <p class="content-child flexible recolor">
                 بينما تستمر إسرائيــل في ارتكاب الفظاعات تجاه المدنيين فـي قطاع غــــزة، منذ بداية الصراع في أكتوبر/تشرين الثاني 2023، بقى توثيـــق تلك الانتهـــاكات بصريًا دليلًا مثبتًا في سبيل عدم إفلاتها من العقاب. يضطر المدنيـــون في قطاع غـزة للفرار مــن الهجمات والاستهداف مرارًا وتكرارًا منذ منتصف أكتوبر/ تشرين الثاني 2023  
             </p>
         </div>
 
         <div id="two" class="content-container right-left bottom-top">
-            <p class="content-child flexible ">
+            <p class="content-child flexible recolor">
                 ثم قامت إسرائيل بتقسيم المنطقة إلى إقطاعات <a href="https://www.idf.il/ar/%D8%AC%D9%8A%D8%B4-%D8%A7%D9%84%D8%AF%D9%81%D8%A7%D8%B9-%D8%A7%D9%84%D8%A5%D8%B3%D8%B1%D8%A7%D8%A6%D9%8A%D9%84%D9%8A/%D8%AC%D9%8A%D8%B4-%D8%A7%D9%84%D8%AF%D9%81%D8%A7%D8%B9-%D8%A7%D9%84%D8%A5%D8%B3%D8%B1%D8%A7%D8%A6%D9%8A%D9%84%D9%8A/swordsofiron-011223-150/" target="_blank">"بلوكـــات"</a> بأرقام محددة في ديسمبر /كانون الأول؛ مستمرةً فــي إطلاق أوامر الإخلاء والانتقـــال كذريعة للتنصل عن مسؤوليتها فــي استهداف المدنيين             
             </p>
-            <p class="content-child flexible ">
+            <p class="content-child flexible recolor">
                 آخرها إعلان القوات الإسرائيلية عن بدء عملياتها البرية في شرق مدينة رفح جنوب القطاع في 6 مايو/أيار 2024، طالبةً من النازحين الانتقال الى المنطقة الآمنة حيث كانت رفح منذ بداية الأحداث إلى تاريخ الإعلان منطقة آمنة للنزوح وملجأ للعديد من المدنيين في غزة، ما اضطرهم الاجتياح الأخير للنزوح مجددًا.
             </p>
         </div>
@@ -307,7 +307,7 @@
                     <span class="source">Daniel Hagari</span>
                 </p>
                 <div id="loading-icon" class="z-top"></div>
-                <video preload="auto" width="320" height="240" class="center-h spice daniel-video" poster="/assets/videos/3_poster.png">
+                <video preload="auto" width="320" height="240" class="center-h spice daniel-video" poster="./assets/videos/3_poster.png">
                     <source src="./assets/videos/3.mp4" type="video/mp4">
                 </video>
             </div>
@@ -339,7 +339,7 @@
                         بينما ظهرت بقايا القذيفة المستخدمة في الهجوم في فيديو نشره أحد المستخدمين على تليجرام، تعود إلى إحدى <span class="highlighted">القنابـل الأمريكيــة من نوع  SDB-GBU-39</span> ، كانت البقايا تعود لنظام تشغيل الذيل، الذي يتحكم في الزعانف التي توجه القنبلة إلى الهدف. استخدام <span class="highlighted">ذخيرتين تزن 17 كجم (37 باوند)</span> في هجومها <span class="highlighted">على المخيم في رفح</span>.
                     </p>
                 </div>
-                <div class="text-graphics flexible center-left">
+                <div class="text-graphics center-left">
                     <p>
                         GBU-39 SDB
                     </p>
@@ -381,7 +381,7 @@
 من الجدير بالذكر، أن إسرائيل تلقت حتى عام 2023 حوالي 1000 قنبلة GBU-39 من الولايات المتحدة <span class="highlighted">وفقًا لبيانات نقل الأسلحة Sipri. </span>
                     </p>
                 </div>
-                <div class="text-graphics flexible center-left">
+                <div class="text-graphics center-left">
                     <p>
                         81873
                     </p>
