Final Preview - Styling Changes

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
         </div>
 
         <div id="one" class="content-container right bottom single">
-            <p class="content-child flexible recolor">
+            <p class="content-child flexible">
                 بينما تستــمر إسرائيــــل في ارتكاب الفظاعات بالمدنيين/ـات فـي قطاع غــــزة، منذ بداية الصــــراع فــي أكتوبـــر/تشريــن الثانـــي <b>2023</b>، يبقى توثيـــق تلك الانتهـــاكات بصريًا دليلًا مثبتًا في سبيل عدم إفلاتها من العقاب. يضطر المدنيـــون/ـات في قطاع غـــزة للفرار من الهجمات والاستهداف مرارًا وتكرارًا منذ منتصف أكتوبر/ تشرين الثاني <b>2023</b> . 
             </p>
         </div>
 
         <div id="two" class="content-container right-left bottom-top">
-            <p class="content-child flexible recolor">
+            <p class="content-child flexible">
                 قامت إسرائيل بتقسيم المنطقة إلى إقطاعات  <a href="https://www.idf.il/ar/%D8%AC%D9%8A%D8%B4-%D8%A7%D9%84%D8%AF%D9%81%D8%A7%D8%B9-%D8%A7%D9%84%D8%A5%D8%B3%D8%B1%D8%A7%D8%A6%D9%8A%D9%84%D9%8A/%D8%AC%D9%8A%D8%B4-%D8%A7%D9%84%D8%AF%D9%81%D8%A7%D8%B9-%D8%A7%D9%84%D8%A5%D8%B3%D8%B1%D8%A7%D8%A6%D9%8A%D9%84%D9%8A/swordsofiron-011223-150/" target="_blank">بلوكـــات</a>  بأرقام  محددة في ديسمبر /كانون الأول <b>2023</b>؛ مستمرةً بإصدار أوامر الإخلاء والانتقـــال كذريعة للتنصل من مسؤوليتها فــي استهداف المدنيين/ـات.
             </p>
-            <p class="content-child flexible recolor">
+            <p class="content-child flexible">
                 آخرها إعلان القوات الإسرائيلية عن بدء عملياتها البرية في شرق مدينة رفح جنوب القطاع في <b> 6 مايو/أيار 2024</b>، طالبةً من النازحين/ـات الانتقال إلى المنطقة الآمنة، وكانت رفح نفسها منذ بداية الأحداث إلى تاريخ الإعلان عن الاجتياح منطقة آمنة للنزوح، وملجأ للعديد من المدنيين/ـات في غزة، الذين أجبرهم/ن الاجتياح الأخير على للنزوح مجددًا.
             </p>
         </div>
